@@ -1,3 +1,11 @@
+#0,1,0,20210614
+	Selection set Copy/past issue fixed.
+	Selection set interface simplified.
+	'Ctrl + K' Insert Keyframe menu (Max mode).
+	'Alt + K' Delete Key (Max mode).
+	'Ctrl + Shift + K' 'Set Key Filter' (max mode).
+	'Set Key Filter' added to Time slider.
+
 #0,1,0,20210611
 	Transfer tool for Rigg Selection set to other Rigg 'Pose mode: Right Panel/Tool/Selection(Pose bone)/Transform/(Copy/Past)'
 
